--- a/src/app/Components/DailyTextareaBlock/DailyTextareaBlock.module.scss
+++ b/src/app/Components/DailyTextareaBlock/DailyTextareaBlock.module.scss
@@ -9,6 +9,10 @@
 	border-radius: variables.$radius-lg;
 	border: .1rem solid var(--color-border);
 
+	&.is-today {
+		border-color: var(--color-primary);
+	}
+
 	.date {
 		@include typography.text-base;
 		display: flex;
