add login form and functionality

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -43,6 +43,7 @@
 	--color-text-settings: #{variables.$color-text-settings};
 	--color-background: #{variables.$color-background};
 	--color-border: #{variables.$color-border};
+	--color-surface: #{variables.$color-surface};
 
 	--color-primary: #{variables.$color-primary};
 	--color-primary-dark: #{variables.$color-primary-dark};
