--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -5,6 +5,7 @@ $color-text-placeholder: #ADAEBC;
 $color-text-settings: #4B5563;
 $color-background: #f9fafb;
 $color-border: #e5e7eb;
+$color-surface: #fff;
 
 $color-primary: #4f46e5;
 $color-primary-dark: #2c1cd5;
