--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -54,6 +54,5 @@ $breakpoints: (
 }
 
 @mixin background-shadow {
-	-webkit-box-shadow: 15px 15px 34px -8px rgba(0,0,0,0.55);
-	box-shadow: 15px 15px 34px -8px rgba(0,0,0,0.55);
+	box-shadow: 0 .2rem .6rem rgba(0, 0, 0, 0.08), 0 .1rem .3rem rgba(0, 0, 0, 0.06);
 }
