general todo update

--- a/src/app/Components/SideBar/Sidebar.module.scss
+++ b/src/app/Components/SideBar/Sidebar.module.scss
@@ -128,6 +128,10 @@
 		padding: var(--space-lg) var(--space-lg) var(--space-lg) var(--space-lg);
 	}
 
+	.remember-loading {
+		align-self: center;
+	}
+
  .add-item {
 	 	margin-top: var(--space-lg);
 		background-color: var(--color-primary);
