--- a/src/app/Components/MobileNavigation/MobileNavigation.module.scss
+++ b/src/app/Components/MobileNavigation/MobileNavigation.module.scss
@@ -13,6 +13,11 @@
 		margin-top: var(--space-sm);
 	}
 
+	.logo-text {
+		font-weight: 700;
+		color: var(--color-primary);
+	}
+
 	.slider-section {
 		position: relative;
 		display: flex;
