--- a/src/app/Components/SideBar/Sidebar.module.scss
+++ b/src/app/Components/SideBar/Sidebar.module.scss
@@ -59,7 +59,7 @@
 		border: .1rem solid var(--color-border);
 		cursor: pointer;
 		color: var(--color-surface);
-		padding-inline: .6rem; /* compact button sizing */
+		padding-inline: .6rem;
 		padding-block: .25rem;
 		border-radius: variables.$radius-md;
 		display: flex;
