--- a/src/app/Components/MobileNavigation/MobileNavigation.module.scss
+++ b/src/app/Components/MobileNavigation/MobileNavigation.module.scss
@@ -8,8 +8,8 @@
 	background-color: var(--color-surface);
 
 	.logo-section {
-		display: grid;
-		grid-template-columns: 1fr auto 1fr;
+		display: flex;
+		justify-content: center;
 		align-items: center;
 		margin-top: var(--space-sm);
 		padding-inline: var(--content-spacing);
@@ -18,10 +18,6 @@
 	.logo-text {
 		font-weight: 700;
 		color: var(--color-primary);
-	}
-
-	.theme-toggle-wrapper {
-		justify-self: end;
 	}
 
 	.slider-section {
