--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -94,6 +94,12 @@
 	--space-2xl: #{mixins.clamp-builder(3.2, 4.0)};
 
 	--content-spacing: #{mixins.clamp-builder(1.6, 4.8)};
+
+	--font-size-xl: 1.3rem;
+	--font-size-lg: 1.1rem;
+	--font-size-base: 1rem;
+	--font-size-sm: 0.9rem;
+	--font-size-xs: 0.8rem;
 }
 
 [data-theme="dark"] {
