--- a/src/app/Components/ProfileContent/ProfileContent.module.scss
+++ b/src/app/Components/ProfileContent/ProfileContent.module.scss
@@ -245,9 +245,8 @@
 }
 
 .theme-selector {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: var(--space-sm);
+	display: flex;
+	gap: var(--space-md);
 }
 
 .theme-card {
@@ -261,6 +260,9 @@
 	background-color: var(--color-surface);
 	cursor: pointer;
 	transition: all variables.$transition-base;
+	width: 100%;
+	max-width: 10rem;
+	height: auto;
 
 	&:hover {
 		border-color: var(--color-border-focus);
@@ -279,7 +281,8 @@
 
 .theme-preview {
 	width: 100%;
-	height: 6rem;
+	height: 15dvw;
+	max-height: 6rem;
 	border-radius: variables.$radius-sm;
 	overflow: hidden;
 	border: .1rem solid var(--color-border-light);
