--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,9 +1,9 @@
 $color-text: #1a1612;
-$color-text-muted: #4a4538;
-$color-text-light: #6b655a;
+$color-text-muted: #35312a;
+$color-text-light: #4a4538;
 $color-text-placeholder: #9a9488;
-$color-text-settings: #4a4538;
-$color-text-secondary: #35312a;
+$color-text-settings: #35312a;
+$color-text-secondary: #2a2621;
 
 $color-background: #f9f8f4;
 $color-surface: #fdfcf8;
