--- a/src/app/Components/MobileNavigation/MobileNavigation.module.scss
+++ b/src/app/Components/MobileNavigation/MobileNavigation.module.scss
@@ -51,7 +51,7 @@
 	}
 
 	.date-section {
-		padding-block: var(--space-lg);
+		padding-block: var(--space-sm);
 		padding-inline: var(--content-spacing);
 		border-bottom: .1rem solid var(--color-border);
 	}
